# PolySynth

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build_and_test.yml
Source/: ADSREnvelope.h  Constants.h  JuceHandler.h  Noise.h  Oscillator.h  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SawtoothOscillator.h  SineOscillator.h  Synth.cpp  Synth.h  Utils.h  Voice.cpp  Voice.h  jx11_Filter.h  jx11_LFO.h  jx11_Oscillator.h
Source/Osc/: jx11_Oscillator.cpp  jx11_Oscillator.h
Tests/: ADSREnvelope_test.cpp  CMakeLists.txt  Filter_test.cpp  Helpers.h  LFO_test.cpp  Oscillator_test.cpp  Synth_test.cpp  Voice_test.cpp
